# my_wrap_fs

./: CMakeLists.txt  README.md
000_wrapfs_src_5.5/: Makefile  dentry.c  file.c  inode.c  lookup.c  main.c  mmap.c  super.c  wrapfs.h
001_module_init/: CMakeLists.txt  Makefile  loopfs.h  loopfs_main.c  loopfs_util.h
002_read_low_super/: CMakeLists.txt  loopfs.h  loopfs_main.c  msg.txt
003_mount_ok/: CMakeLists.txt  Makefile  lookup.c  loopfs.h  loopfs_main.c  loopfs_util.h  super.c
004_read_inode/: CMakeLists.txt  Makefile  dentry.c  lookup.c  loopfs.h  loopfs_main.c  super.c
005_read_dir_lsdotdot/: CMakeLists.txt  dentry.c  inode.c  lookup.c  loopfs.h  super.c
006_lookup/: CMakeLists.txt  Makefile  super.c
007_statfs/: CMakeLists.txt  file.c  inode.c  loopfs.h  loopfs_main.c  mmap.c  super.c
008_read_low_dir/: CMakeLists.txt  inode.c  loopfs.h
009_mkdir/: CMakeLists.txt  inode.c
00xx5_read_dir_lsdotdot/: Makefile  dentry.c  inode.c  lookup.c  loopfs_main.c  super.c
010_rmdir_unlink/: CMakeLists.txt  dentry.c  inode.c  lookup.c  super.c
011_rename/: CMakeLists.txt  inode.c
012_create/: CMakeLists.txt  inode.c  loopfs.h
013_link_symlink/: CMakeLists.txt  file.c  inode.c
014_mknod/: CMakeLists.txt  inode.c  loopfs_main.c
015_attr/: CMakeLists.txt  inode.c
016_link_main_attr/: CMakeLists.txt  lookup.c  mmap.c
017_file_ops/: CMakeLists.txt  inode.c
018_dentry_revalidate/: CMakeLists.txt  file.c
019_xattr/: CMakeLists.txt  loopfs.h  loopfs_main.c  loopfs_util.h
020_support_nfs/: CMakeLists.txt  dentry.c  inode.c  lookup.c  loopfs.h  (+3 more)
(+4 files in other folders)
